# Silky-Blade

./: .gitignore  AGENTS.md  AUDIT.md  CLAUDE.md  REPRODUCE.md  TRUST.md
apps/api/: pyproject.toml
apps/api/data/models/sp500_lightgbm_2026/: calibrators.pkl  config.snapshot.json  feature_importances.csv  manifest.json  model_meta.json
apps/api/data/models/sp500_lightgbm_2026/boosters/: fold_0.txt  fold_1.txt  fold_2.txt  fold_3.txt  fold_4.txt
apps/api/examples/backtest/: sp500_ml_predictions.yaml  sp500_momentum_2026.yaml  sp500_momentum_pit.yaml  sp500_momentum_sweep.yaml  sp500_momentum_sweep_pit.yaml
apps/api/examples/backtest/artifacts/sp500_ml_predictions_v1/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_126/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_126_2026/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_126_pit/: config.snapshot.json  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep/: manifest.json  sweep.config.snapshot.json  sweep_report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep/per_run/low_vol_126/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep/per_run/low_vol_252/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep/per_run/low_vol_63/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep/per_run/mean_rev_10/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep/per_run/mean_rev_5/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep/per_run/mom_126/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep/per_run/mom_126_lowcost/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep/per_run/mom_126_top10/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep/per_run/mom_126_top50/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep/per_run/mom_189/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep/per_run/mom_252/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep/per_run/mom_42/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep/per_run/mom_63/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep_pit/: manifest.json  sweep.config.snapshot.json  sweep_report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep_pit/per_run/low_vol_126/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep_pit/per_run/low_vol_252/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep_pit/per_run/low_vol_63/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep_pit/per_run/mean_rev_10/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep_pit/per_run/mean_rev_5/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep_pit/per_run/mom_126/: config.snapshot.json  equity_curve.csv  manifest.json  report.json
apps/api/examples/backtest/artifacts/sp500_momentum_sweep_pit/per_run/mom_126_lowcost/: config.snapshot.json  (+3 more)
apps/api/examples/ml/: README.md  sp500_lightgbm.yaml  sp500_lightgbm_2026.yaml
apps/api/scripts/: backfill_alpaca_to_csv.py  fetch_fundamentals.py
apps/api/src/quant/: cli.py
apps/api/src/quant/adapters/: openrouter.py
apps/api/src/quant/api/v1/: __init__.py  backtest.py  paper.py  signals.py
apps/api/src/quant/backtest/: __init__.py  engine.py  runner.py  signals.py  sweep.py  universe_filter.py
apps/api/src/quant/config/: settings.py
apps/api/src/quant/data/: __init__.py  providers_health.py  verify.py
apps/api/src/quant/execution/: live_session.py  orders_log.py  reconciliation.py  risk_gate.py  sanity_check.py
apps/api/src/quant/features/: briefing.py  catalysts.py  macro_regime.py  sentiment.py
apps/api/src/quant/ml/: __init__.py  config.py  predict.py  trainer.py  tune.py
apps/api/src/quant/monitoring/: alerts.py
apps/api/src/quant/risk/: manager.py
apps/api/src/quant/universe/: point_in_time.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_backtest_routes.py  test_paper_routes.py
apps/api/tests/unit/: test_backtest_signals.py  test_backtest_sweep.py  test_data_verify.py  test_live_session.py  test_ml_predictions_signal.py  test_ml_trainer.py  test_providers_health.py  test_risk_gate.py  test_sentiment_pipeline.py  test_universe_filter.py
(+46 files in other folders)
