[project]
name = "quant-api"
version = "0.1.0"
description = "Quant Signal Platform — FastAPI backend"
requires-python = ">=3.12"

dependencies = [
    # --- web ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "httpx>=0.28",
    "websockets>=13.1",
    "sse-starlette>=2.1",

    # --- settings + validation ---
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",

    # --- auth ---
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",              # passlib 1.7.x incompatible with bcrypt 5.x (raises on any input)
    "python-jose[cryptography]>=3.3",

    # --- db ---
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary,pool]>=3.2",
    "asyncpg>=0.30",

    # --- cache / queues / streams ---
    "redis>=5.2",
    "hiredis>=3.0",

    # --- object storage ---
    "boto3>=1.35",
    "minio>=7.2",

    # --- data / ml ---
    "polars>=1.17",
    "pandas>=2.2",
    "numpy>=2.1",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "xgboost>=2.1",
    "shap>=0.46",
    "optuna>=3.6",
    "statsmodels>=0.14",
    "hmmlearn>=0.3",
    "mlflow>=2.18",
    "pyarrow>=18.0",

    # --- provider adapters ---
    "polygon-api-client>=1.14",        # Polygon
    "alpaca-py>=0.34",                 # Alpaca broker + market data + stream
    "fredapi>=0.5",                    # FRED macro
    "finnhub-python>=2.4",             # Finnhub
    "yfinance>=0.2.50",                # yfinance fallback
    "sec-api>=1.0",                    # SEC EDGAR helper (optional)
    "groq>=0.13",                      # Groq LLM

    # --- workflow / scheduling ---
    "prefect>=3.1",
    "apscheduler>=3.10",

    # --- observability ---
    "loguru>=0.7",
    "prometheus-client>=0.21",
    "sentry-sdk[fastapi]>=2.18",
    "structlog>=24.4",

    # --- utils ---
    "python-dateutil>=2.9",
    "pytz>=2024.2",
    "orjson>=3.10",
    "tenacity>=9.0",
    "tqdm>=4.67",
    "typer>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.6",
    "httpx>=0.28",
    "freezegun>=1.5",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-python-dateutil",
    "types-pytz",
    "ipython>=8.30",
]

[project.scripts]
quant = "quant.cli:app"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["quant*"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",     # pycodestyle
    "F",          # pyflakes
    "I",          # isort
    "B",          # bugbear
    "UP",         # pyupgrade
    "SIM",        # simplify
    "RUF",        # ruff-specific
    "S",          # bandit (security)
    "C4",         # comprehensions
    "PIE",        # misc
    "T20",        # no print in prod code
    "ANN",        # require type annotations
]
ignore = [
    "ANN401",             # allow Any where dynamic payloads demand it
    "S101",               # asserts ok in tests
    "T201",               # allow print in scripts/workers
    "B008",               # FastAPI Depends()/File() in defaults is canonical
    "RUF012",             # SQLAlchemy __table_args__ = (…) is mutable by design
    "RUF001",             # scientific docs use unicode (×, σ, μ, ∈, …) deliberately
    "RUF002",             # same — ambiguous-char checks fire on Greek letters in math
    "RUF003",             # same, for comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108", "ANN", "T201", "E501"]
"src/quant/workers/**" = ["T201"]
"scripts/**" = ["T201"]
"alembic/**" = ["E501", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
# warn_unused_ignores creates noise when stub versions differ between local
# and CI (especially bs4 / numpy). Disabled — preferring tolerance over noise.
warn_unused_ignores = false
plugins = ["pydantic.mypy"]
# JSON payloads from provider APIs are untyped by nature; no-any-return would
# force a cast() on every adapter method. Disable globally — typing discipline
# is preserved at call sites via explicit annotations.
disable_error_code = [
    "no-any-return",
    # numpy stubs ship without parametric generics for many call-sites; the
    # codebase carries Float/Int arrays through helpers where the dtype is
    # known by domain but not by mypy. Allowing bare `ndarray` is pragmatic.
    "type-arg",
    # Prefect's @task and @flow are untyped by design — they apply runtime
    # metadata. The decorated functions are fully typed at the body level.
    "untyped-decorator",
]

[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "xgboost.*",
    "shap.*",
    "hmmlearn.*",
    "fredapi.*",
    "finnhub.*",
    "yfinance.*",
    "polygon.*",
    "alpaca.*",
    "sec_api.*",
    "jose",
    "jose.*",
    "passlib",
    "passlib.*",
    "prefect",
    "prefect.*",
    "sklearn.*",
    "mlflow",
    "mlflow.*",
    "scipy",
    "scipy.*",
    "redis",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests hitting the DB/redis",
    "chaos: chaos/fault-injection tests",
    "slow: long-running",
    "external: hits a real external API (skipped in CI by default)",
]
